remove scroll padding, add scroll stopping and reduce font size on mobile

--- a/styles/components/Hero.scss
+++ b/styles/components/Hero.scss
@@ -27,7 +27,7 @@
       margin: 0;
       display: inline-block;
       line-height: 1.3;
-      font-size: clamp(4.6rem, 4.6vw, 8vw);
+      font-size: clamp(4rem, 4.6vw, 8vw);
       overflow: hidden;
 
       * {
@@ -36,7 +36,7 @@
     }
 
     .font--alt {
-      font-size: clamp(4.6rem, 4.6vw, 8vw);
+      font-size: clamp(4rem, 4.6vw, 8vw);
       font-style: italic;
       text-align: left;
       font-weight: 300;
