--- a/styles/config/base.scss
+++ b/styles/config/base.scss
@@ -20,7 +20,6 @@ html {
   font-size: 62.5%;
   min-height: 100%;
   scroll-snap-type: y mandatory;
-  scroll-padding-top: 50px;
   height: 100vh;
   overflow-y: scroll;
   box-sizing: border-box;
